--- a/DesafioCrudMvcComeia/Views/Home/Index.cshtml
+++ b/DesafioCrudMvcComeia/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 
 <div class="jumbotron">
     <h1>Comeia me contrata!</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p class="lead">Irei apresentar nesse projeto a prática de um Crud tendo como contexto os dados de uma empresa, e vou apresentar o consumo de uma API.</p>
+    <p><a href="https://github.com/LuandersonFerreira" class="btn btn-primary btn-lg">Acesse meu Github :) &raquo;</a></p>
 </div>
 
 <div class="row">
