--- a/DesafioCrudMvcComeia/Views/Home/Contact.cshtml
+++ b/DesafioCrudMvcComeia/Views/Home/Contact.cshtml
@@ -5,13 +5,12 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Esses são meus meios de contato:<br />
+    <br />
+    <abbr title="Phone">Telefone:</abbr>
+    (81) 99441-9948
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email:</strong>   <a href="mailto:Support@example.com">luandersonferreira123@gmail.com</a><br />
 </address>
