--- a/DesafioCrudMvcComeia/Views/Shared/_Layout.cshtml
+++ b/DesafioCrudMvcComeia/Views/Shared/_Layout.cshtml
@@ -17,13 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Luanderson Ferreira", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Empresa", "Index", "Empresa")</li>
-                    <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("API", "About", "Home")</li>
+                    <li>@Html.ActionLink("Fale Comigo", "Contact", "Home")</li>
                 </ul>
             </div>
         </div>
