--- a/DesafioCrudMvcComeia/Views/Shared/_Layout.cshtml
+++ b/DesafioCrudMvcComeia/Views/Shared/_Layout.cshtml
@@ -38,6 +38,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/jsMask/jquery-3.5.1.min.js"></script>
+    <script src="~/jsMask/jquery.mask.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
